Added a scripts folder for more organization

--- a/display.html
+++ b/display.html
@@ -13,6 +13,6 @@
     <body dir='ltr'>
         <div id='title'>View your Clipboard history:</div>
         <div id='display'></div>
-        <script src="display.js"></script>
+        <script src="scripts/display.js"></script>
     </body>
 </html>
